# katoob

./: .clang-format  .clang-tidy  .gitignore  AUTHORS  ChangeLog  Doxyfile  Doxyfile.in  INSTALL  INSTALL.in  Makefile.am  NEWS  README  README.md  THANKS  TODO  TODO.md  config-win32.h  config.h.in  configure.in  katoob.de.1  katoob.desktop.in  katoob.desktop.in.in  meson.build  meson_options.txt
data/: Makefile.am  meson.build  toolbar
data/emulator/: Makefile.am  arabic  fr_transliteration  hebrew  meson.build
data/multipress/: Makefile.am  arabic  meson.build
data/ui/: Makefile.am  bars.xml
debian/: changelog  control  copyright  menu  rules  watch
debian/patches/: Gtk-ButtonBox.patch  correct_open_call.patch  desktop_file_fixes.patch  dict_test_fix.patch  fix_save_perms.patch  fix_tooltip_crash.patch  gcc45_ftbfs_fixes.patch  link_fix.patch  replace_fribidi-config_pkg-config.patch  series
debian/source/: options
desktop/: com.fredmorcos.Katoob.desktop.in.in  com.fredmorcos.katoob.desktop.in  com.fredmorcos.katoob.desktop.in.in  katoob.desktop  meson.build
doc/: Doxyfile.in  meson.build
icon/: meson.build
icon/scalable/: meson.build
m4/: Makefile.am
maemo/: Makefile.am  katoob.service.in
man/: katoob.1  katoob.1.in  katoob.de.1  katoob.de.1.in  meson.build
misc/: copyright.sed  have-config-h.sed  license.sed
po/: Katoob.pot  LINGUAS  Makefile.in.in  POTFILES  POTFILES.in  ar.po  cz.po  de.po  fr.po  he.po  ja.po  katoob.pot  meson.build  pl.po  sv.po
resources/: com.fredmorcos.Katoob.gresource.xml.in  mainWindow.ui.in  mainWindowMenu.ui  meson.build
src/: Makefile.am  aboutdialog.cc  aboutdialog.hh  applets.cc  applets.hh  application.cc  application.hh  bars.cc  bars.hh  conf.cc  conf.hh  dbus.cc  dbus.hh  dialogs.cc  dialogs.hh  dict.cc  dict.hh  docfactory.cc  docfactory.hh  document.cc  document.hh  emulator.cc  emulator.hh  encodings.cc  encodings.hh  execdialog.cc  execdialog.hh  export.cc  export.hh  filedialog.cc  filedialog.hh  import.cc  import.hh  inputwindow.cc  inputwindow.hh  isocodes.cc  isocodes.hh  katoob.cc  katoob.hh  label.cc  (+68 more)
src/pixmaps/: Makefile.am
src/win32/: katoob.rc
src/xdgmime/: Makefile.am  xdgmimecache.c  xdgmimeglob.c
