option('bzip2'     , type: 'boolean', value: true,  description: 'Support bzip2 compressed files')
option('dbus'      , type: 'boolean', value: true,  description: 'Single Katoob instance when opening files')
option('dict'      , type: 'boolean', value: true,  description: 'Online dictionary lookups using curl')
option('emulator'  , type: 'boolean', value: true,  description: 'Build the keyboard layout emulator')
option('fribidi'   , type: 'boolean', value: true,  description: 'Support bidirectional text')
option('gzip'      , type: 'boolean', value: true,  description: 'Support gzip compressed files')
option('highlight' , type: 'boolean', value: true,  description: 'Syntax highlighting')
option('spell'     , type: 'boolean', value: true,  description: 'Spell checking')
option('isocodes'  , type: 'boolean', value: true,  description: 'Human-readable names for spell languages')
option('maemo'     , type: 'boolean', value: false, description: 'Build for the Maemo platform')
option('multipress', type: 'boolean', value: true,  description: 'Build the multipress feature')
option('nls'       , type: 'boolean', value: true,  description: 'Native language support')
option('print'     , type: 'boolean', value: true,  description: 'Support printing')
